[project]
name = "mov"
version = "0.1.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
mov-ping = 'mov.cli:ping'


[project.urls]
Homepage = "https://github.com/GITSangWoo/mov/tree/main"
Issues = "https://github.com/GITSangWoo/mov/issues"
